--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     overflow-x: hidden;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .name-logo{
   margin-right: 3.5rem;
   width: 7rem;
@@ -161,7 +165,7 @@ nav {
     padding-bottom: 2.5rem;
     padding-left: 12%;
     padding-right: 12%;
-
+    scroll-margin-top: 5rem;
  }
 
 .about-section h4{
@@ -249,4 +253,53 @@ nav {
   font-size: 0.875rem;
   line-height: 1.25rem;
   color: #4B5563;
+}
+
+.technologies-icons-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 3rem;
+  aspect-ratio: 2/2;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid #9CA3AF;
+}
+
+.technologies-icons {
+  padding: 0px;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem
+}
+
+.about-section-profile-image-circle {
+  background-color: white;
+  width: 50%;
+  height: 33%;
+  position: absolute;
+  top: 290px;
+  right:0;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  translate: 25% 44%;
+  box-shadow: 0px 4px 5px rgba(149, 0, 162, 0.15);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-section-profile-developer-icon{
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 25%;
+}
+
+.work-section {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+  width: 100%;
+  scroll-margin-top: 5rem;
 }
