--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ html {
 }
 
 nav {
+  backdrop-filter: blur(16px);
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   display: flex;
   position: fixed;
   z-index: 50;
@@ -67,6 +70,7 @@ nav {
   justify-content: space-between;
   width: 100%;
 }
+
 .body-background-color img {
   width: 100%;
 }
@@ -302,4 +306,241 @@ nav {
   padding-bottom: 2.5rem;
   width: 100%;
   scroll-margin-top: 5rem;
+}
+
+.work-section-h4 {
+  margin-bottom: 0.5rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  text-align: center;
+}
+.work-section-h2 {
+  font-size: 3rem;
+  line-height: 1;
+  text-align: center;
+  font-weight: 500;
+}
+
+.work-section-p {
+  margin-top: 1.25rem;
+  margin-bottom: 3rem;
+  text-align: center;
+  max-width: 42rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.work-section-projects-work-1 {
+  aspect-ratio: 1/1;
+  border-radius: 0.5rem;
+  background: url("./images/airbnb.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  cursor: pointer;
+  position: relative;
+}
+.work-section-projects-work-2 {
+  aspect-ratio: 1/1;
+  border-radius: 0.5rem;
+  background: url("./images/JobConnectLive.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  cursor: pointer;
+  position: relative;
+}
+
+.work-section-projects-work-3 {
+  aspect-ratio: 1/1;
+  border-radius: 0.5rem;
+  background: url("./images/travel.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  cursor: pointer;
+  position: relative;
+}
+
+.work-section-projects-work-4 {
+  aspect-ratio: 1/1;
+  border-radius: 0.5rem;
+  background: url("./images/weather.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  cursor: pointer;
+  position: relative;
+}
+
+
+
+
+.work-section-projects {
+  display: grid;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 1.25rem;
+  padding-left: 12%;
+  padding-right: 12%;
+}
+
+.work-section-projects-work-background-square {
+  background-color: #ffffff;
+  width: 83.333333%;
+  border-radius: 0.375rem;
+  position: absolute;
+  bottom: 1.25rem;
+  left: 50%;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  transition-duration: 500ms;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  transform: translateX(-50%);
+}
+
+.send-icon {
+    margin-left: 50px;
+    width: 2.25rem;
+    box-shadow: 2px 2px 0px #000;
+    aspect-ratio: 1 / 1;
+    border-radius: 9999px;
+    border: 1px solid black;
+    border-color: #000000;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+}
+
+
+.send-icon img{
+      width: 1.25rem;
+}
+
+.show-more-button {
+  width: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #374151;
+  border: 0.5px solid #ccc;
+  border-radius: 9999px;
+  gap: 1rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.show-more-button:hover {
+  background-color: #fcf4ff;
+  cursor: pointer;
+  transition-duration: 500ms;
+}
+
+.contact-section {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+  width: 100%;
+  scroll-margin-top: 5rem;
+  background: url("./images/footer-bg-color.png");
+  background-size: 90% auto;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.contact-form {
+  max-width: 42rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact-form-div {
+  display: grid;
+  margin-bottom: 2rem;
+  margin-top: 2.5rem;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 1.5rem;
+}
+
+.contact-form-input-field {
+  padding: 0.75rem;
+  flex: 1 1 0%;
+  border-radius: 0.375rem;
+  outline-style: none;
+  background-color: #ffffff;
+  border: 0.5px solid rgba(156, 163, 175, 1);
+}
+
+textarea {
+  padding: 1rem;
+  width: 100%;
+  outline: none;
+  border: 0.5px solid rgba(156, 163, 175, 1);
+  border-radius: 0.375rem;
+  background-color: white;
+  margin-bottom: 1.5rem;
+}
+
+#submit-button {
+  display: flex;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  gap: 0.5rem;
+  justify-content: space-between;
+  align-items: center;
+  width: max-content;
+  color: #ffffff;
+  background: rgba(0, 0, 0 , 0.8);
+  border-radius: 9999px;
+  margin: 0 auto;
+}
+#submit-button:hover {
+  background: black;
+  cursor: pointer;
+  transition-duration: 500ms;
+}
+.footer-section{
+  background-color: white;
+}
+.footer-section-links {
+  width: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  margin: 0 auto;
+}
+
+.footer-section-networks-links {
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  border-top: 0.5px solid rgba(156, 163, 175, 1) ;
+  margin-top: 3rem;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.footer-section-networks-links ul{
+   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+  gap: 2.5rem;
 }
