--- a/style.css
+++ b/style.css
@@ -56,9 +56,6 @@ html {
 }
 
 nav {
-  backdrop-filter: blur(16px);
-  background-color: rgba(255, 255, 255, 0.5);
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   display: flex;
   position: fixed;
   z-index: 50;
@@ -73,6 +70,9 @@ nav {
 
 .body-background-color img {
   width: 100%;
+  backdrop-filter: blur(16px);
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 .body-background-color {
   position: fixed;
@@ -100,6 +100,11 @@ nav {
 .profile-section img {
   border-radius: 9999px;
   width: 8rem;
+}
+
+#download-icon-image {
+   width: 8rem;
+   border-radius: 0px;
 }
 
 #hand-icon {
@@ -333,7 +338,7 @@ nav {
 .work-section-projects-work-1 {
   aspect-ratio: 1/1;
   border-radius: 0.5rem;
-  background: url("./images/airbnb.jpg");
+  background: url("./images/airnbnb.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -365,7 +370,7 @@ nav {
 .work-section-projects-work-4 {
   aspect-ratio: 1/1;
   border-radius: 0.5rem;
-  background: url("./images/weather.jpeg");
+  background: url("./images/weather.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -420,6 +425,12 @@ nav {
 
 .send-icon img{
       width: 1.25rem;
+      margin: 7px;
+}
+
+.send-icon:hover {
+  background-color: lightseagreen;
+
 }
 
 .show-more-button {
@@ -543,4 +554,9 @@ textarea {
   align-items: center;
   margin-top: 1rem;
   gap: 2.5rem;
+}
+
+.work-section-projects-work-background-square a:visited {
+  color: inherit;
+  text-decoration: none;
 }
